# multistuntcar

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  physics-review.html
data/Tracks/Original/: manifest.json
data/Tracks/TNT/: manifest.json
package/: template.html
reference/: SCR-TNT
src/: 3D_Engine.cpp  3D_Engine.h  Atlas.cpp  Backdrop.cpp  Backdrop.h  Car.cpp  Car.h  Car_Behaviour.cpp  Car_Behaviour.h  Opponent_Behaviour.cpp  Opponent_Behaviour.h  PhysicsConfig.h  StuntCarRacer.cpp  StuntCarRacer.h  StuntCarRacer.manifest  StuntCarRacer.rc  Track.cpp  Track.h  XBOXController.cpp  XBOXController.h  dx_linux.cpp  dx_linux.h  platform_sdl_gl.cpp  platform_sdl_gl.h  resource.h  sound_sdl.cpp  wavefunctions.cpp  wavefunctions.h
tools/: extract_tnt_tracks.py  generate_original_tracks.py
webrtc/muttistuntcarsignal/: README.md
